# zk-symbiotic

./: .env.dvn.example  .env.example  .gitignore  Cargo.toml  DUAL_CHAIN_LOCKING.md  LAYERZERO_DVN.md  LAYERZERO_DVN_STATUS.md  PHASE0_RELAY_INTEGRATION.md  README.md  deployed-addresses.env  package-lock.json  package.json  remappings.txt
golem-consensus-mpt/: Cargo.toml
golem-symbiotic-app-source-contract-bindings/: Cargo.toml
golem-symbiotic-app-source-contract-bindings/src/: app_src.rs  lib.rs
golem-symbiotic-consensus-mpt/: Cargo.toml
golem-symbiotic-consensus-mpt-program/: Cargo.toml  rebuild-zk.sh
golem-symbiotic-consensus-mpt-program-builder/: Cargo.toml
golem-symbiotic-consensus-mpt-program-elf/: golem-symbiotic-consensus-mpt-program
golem-symbiotic-consensus-mpt-program/src/: consensus.rs  main.rs  mpt.rs
golem-symbiotic-consensus-mpt-types/: Cargo.toml
golem-symbiotic-consensus-mpt-types/src/: types.rs
golem-symbiotic-consensus-mpt/src/: lib.rs
golem-symbiotic-consensus-mpt/src/api/: event_loop.rs  finality_change_detector.rs  golem.rs  mod.rs  sp1_prover.rs
golem-symbiotic-consensus-mpt/src/rpcs/consensus/: mod.rs
golem-symbiotic-consensus-mpt/src/rpcs/execution/: http.rs
nori-golem-storage/: package-lock.json  package.json  tsconfig.json
nori-golem-storage/src/: ethConsensusProofBundleFetcher.ts  golemClient.ts  golemConsensusProofEntity.ts  noriBridgeListener.ts  proofObtainer.ts  types.ts
nori-golem-storage/src/test/: test1.ts  test2.ts
offchain/dvn-worker/: .env.example  package.json
offchain/dvn-worker/src/: dvn-worker.ts  event-listener.ts  index.ts  relay-client.ts  types.ts  zk-client.ts
offchain/dvn-worker/src/utils/: hash.ts
script/: DeployAppSourceHolesky.s.sol  DeployAppSourceLocal.s.sol  DeployAppSourceLocalWithMock.s.sol  DvnDeploy.s.sol  DvnRelayIntegration.s.sol  LocalDeploy.s.sol  SettlementChainDeploy.s.sol  ValSetDriverDeploy.s.sol
scripts/: check-relay-status.sh  deploy-dual-appsource.sh  dual-lock-tokens.ts
src/layerzero/app/: AppDest.sol  AppSource.sol  BETH.sol  MockEndpoint.sol
src/layerzero/dvn/: SymbioticDvn.sol
src/layerzero/dvn/interfaces/: ILayerZeroDVN.sol  ISymbioticSettlement.sol
src/layerzero/zk/: IZkEthStateVerifier.sol  StubZkEthStateVerifier.sol
test/: DvnE2E.t.sol  DvnRelayIntegration.t.sol
test/mock/: SettlementMock.sol
