[package]
version = "0.0.1"
name = "golem-symbiotic-consensus-mpt"
edition.workspace = true
license.workspace = true
authors.workspace = true

#[[bin]]
#name = "nbhead"
#path = "./bin/nori_bridge_head.rs"

[lib]
path = "src/lib.rs"
name = "nori"

[dependencies]
golem-symbiotic-app-source-contract-bindings = { workspace = true }
golem-symbiotic-consensus-mpt-program = { workspace = true }
golem-symbiotic-consensus-mpt-types = { workspace = true }
nori-hash = { workspace = true }
dotenv = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { workspace = true }
helios-consensus-core = { workspace = true }
helios-ethereum = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
alloy-primitives = { workspace = true }
alloy = { workspace = true }
alloy-trie = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
reqwest = { workspace = true }
tree_hash = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1.86"
futures = "0.3.31"
rand = "0.9.0"
chrono = "0.4.39"
